trunk/Archive2/63/6f68a09e34c148/output
main.cpp: In function 'int main()':
main.cpp:24:20: error: aggregate 'MyClass2<int> t1' has incomplete type and cannot be defined
      MyClass2<int> t1; // Errors
                    ^
main.cpp:23:22: warning: unused variable 't' [-Wunused-variable]
      MyClass2<float> t;
                      ^
